Agrego codirector a portada

--- a/main.tex
+++ b/main.tex
@@ -77,8 +77,8 @@
 \def\HRule{\rule{\linewidth}{0.8pt}}
 \def\ttitlefirst{Verificación de smart contracts en}
 \def\ttitlesecond{Marlowe para la blockchain Cardano}
-\def\authornames{Julián Ferres}
-\def\supname{Dr.\ Ing. Mariano G. Beiró}
+\def\authornames{Julián Ferres\\ \quad}
+\def\supname{Dr.\ Ing. Mariano G. Beiró\\Phd. Simon Thompson}
 
 \begin{titlepage}
   \centering
@@ -104,7 +104,7 @@
   \end{minipage}
   \begin{minipage}{0.4\textwidth}
     \begin{flushright} \Large
-      \emph{Director:} \\
+      \emph{Directores:} \\
       {\supname} % Supervisor name - remove the \href bracket to remove the link
     \end{flushright}
   \end{minipage}%
